objects/Extended_Profile_Category_Item_Asgn__c.object
<CustomObject>
    <description>This object supports the relationship between an Extended Profile Category leaf item and an Extended Profile Item.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to an Account object&apos;s record. As per MDCP Data Model, this custom objects implements an intersection between an Extended Profile Category Item and an Account record of type Organization or Business Relationship.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Extended Profile Category Item Asgns</relationshipLabel>
        <relationshipName>ExtendProfileItemJunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Effective Date of an Extended ProfileCategory  Item Assignment. The assignment has validity starting from this Date.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>Expity Date of an Extended ProfileCategory  Item Assignment. The assignment has validity up to this Date.</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extended_Profile_Category_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Extended Profile Category Item. Item reference to a parent Extended Profile Category Item object&apos;s record.</description>
        <label>Extended Profile Category Item</label>
        <referenceTo>Extended_Profile_Category_Item__c</referenceTo>
        <relationshipLabel>Extended Profile Category Item Asgns</relationshipLabel>
        <relationshipName>ExtendProfileItemJunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Business_Area_Group__c</fullName>
        <description>Item&apos;s Business Area Group retrieved from a parent Extended Profile Category Item object&apos;s record.</description>
        <formula>Extended_Profile_Category_Item__r.Business_Area_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Business Area Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Effective_Date__c</fullName>
        <description>Item&apos;s Effective Date retrieved from a parent Extended Profile Category Item object&apos;s record.</description>
        <formula>Extended_Profile_Category_Item__r.Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Expiry_Date__c</fullName>
        <description>Item&apos;s Expiry Date retrieved from a parent Extended Profile Category Item object&apos;s record.</description>
        <formula>Extended_Profile_Category_Item__r.Expiry_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Status__c</fullName>
        <description>Item&apos;s Status retrieved from a parent Extended Profile Category Item object&apos;s record.</description>
        <formula>Extended_Profile_Category_Item__r.Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <description>Item&apos;s Type retrieved from a parent Extended Profile Category Item object&apos;s record.</description>
        <formula>Extended_Profile_Category_Item__r.Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a Location object&apos;s record. As per MDCP Data Model, this custom objects implements an intersection between an Extended Profile Category Item and a Location record.</description>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Extended Profile Category Item Asgns</relationshipLabel>
        <relationshipName>ExtendProfileItemJunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDCP_Active__c</fullName>
        <description>The field provides an indication whether this record is still current or has been inactivated (logically deleted) in the MDCP source system.</description>
        <label>MDCP Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Extended Profile Category Item Assignment status. Values not known and not boundable to a local picklist.</description>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Userkey__c</fullName>
        <description>Extended Profile Category Item Assignment unique key.</description>
        <externalId>true</externalId>
        <label>Userkey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Extended Profile Category Item Asgn</label>
    <nameField>
        <displayFormat>EPCIA-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extended Profile Category Item Asgns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>